# kartograf

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
cartograph/: cli.py  density.py  evals.py  generator.py  pipeline.py  report.py  surfaces.py
cartograph/agents/: __init__.py  adk_factory.py  auditor.py  common.py  generator.py  mapper.py  root.py
cartograph/core/: __init__.py  adk_eval.py  clustering.py  coverage.py  embeddings.py  math.py  models.py  risk.py  storage.py  validation.py
cartograph/demo/: __init__.py  deep_dive.py  prepare.py  visualize.py
cartograph/demo/mocks/: corpus_reader_bitext.json  corpus_reader_github.json  corpus_reader_stackexchange.json
cartograph/mcp_servers/: __init__.py  _common.py  corpus_reader_bitext.py  corpus_reader_github.py  corpus_reader_stackexchange.py  coverage_state.py  eval_io_adk.py  eval_io_git.py
data/precomputed/: customer-service.evalset.json  customer-service_cartograph_generated.evalset.json  customer_service_report.json  fleet_benchmark.json
docs/: cartograph_implementation_spec.md  cartograph_proposal.md  devpost_draft.md  proposal.md  submission_checklist.md
docs/figures/: kartograf_map_customer_service.html  kartograf_map_financial_advisor.html
docs/figures/fleet/: customer-service.html  data-science.html  financial-advisor.html  marketing-agency.html  travel-concierge.html
scripts/: clone_adk_samples.py  fetch_bitext.py  fetch_github_issues.py  fetch_stackexchange.py  pre_submission_check.sh  run_demo.sh  verify.sh
tests/: conftest.py  test_agent_adk_factory.py  test_agent_auditor.py  test_agent_generator.py  test_agent_mapper.py  test_core_adk_eval.py  test_core_clustering.py  test_core_coverage.py  test_core_risk.py  test_core_storage.py  test_core_validation.py  test_demo_deep_dive.py  test_e2e_smoke.py  test_mcp_corpus_reader_bitext.py  test_mcp_coverage_state.py  test_mcp_eval_io_adk.py  test_mcp_eval_io_git.py  test_mcp_stdio_roundtrip.py  test_orchestrator_decisions.py  test_pipeline.py  test_scripts_exist.py
