[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartograph"
version = "0.1.0"
description = "Semantic coverage auditor for agent eval suites"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.5",
  "numpy>=1.24",
  "typer>=0.12",
  "rich>=13",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
full = [
  "google-adk>=1.0",
  "google-genai>=0.5",
  "mcp>=1.2",
  "hdbscan>=0.8",
  "umap-learn==0.5.5; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "joblib>=1.3",
  "datasets>=2.18",
  "PyGithub>=2.1",
  "stackapi>=0.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pyyaml>=6",
]
dev = [
  "pytest>=7.4",
  "pytest-asyncio",
  "pytest-mock",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.scripts]
cartograph = "cartograph.cli:app"

[tool.setuptools.packages.find]
include = ["cartograph*"]

[tool.setuptools.package-data]
cartograph = ["demo/mocks/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cartograph.core"]

[[tool.mypy.overrides]]
module = ["umap", "hdbscan", "joblib"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
  "e2e: opt-in end-to-end tests that may call external services",
]
testpaths = ["tests"]
