[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kartograf"
version = "0.2.0"
description = "Semantic coverage map for agent eval suites — plot the embeddings, see the gaps, propose tests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.5",
  "numpy>=1.24",
  "typer>=0.12",
  "rich>=13",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
full = [
  "google-adk>=1.0",
  "google-genai>=0.5",
  "mcp>=1.2",
  "umap-learn==0.5.5; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "scipy>=1.11",
  "joblib>=1.3",
]
dev = [
  "pytest>=7.4",
  "pytest-asyncio",
  "pytest-mock",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.scripts]
kartograf = "cartograph.cli:app"

[tool.setuptools.packages.find]
include = ["cartograph*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"cartograph/report.py" = ["E501"]
"cartograph/cli.py" = ["B008"]  # typer idiom: Option() in argument defaults

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cartograph.core"]

[[tool.mypy.overrides]]
module = ["umap", "hdbscan", "joblib"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
  "e2e: opt-in end-to-end tests that may call external services",
]
testpaths = ["tests"]
